apply plugin: 'java'
group = 'com.wikia.qa'
version = '1.0.0'
sourceCompatibility = 1.7
apply from: rootProject.file('gradle/static_checks.gradle')

repositories {
    jcenter()
}


// docs: https://gradle.org/docs/current/dsl/org.gradle.api.tasks.testing.Test.html
test {
    useTestNG {
        suiteXmlFiles = (project.hasProperty('testSuite') ? testSuite :
                         'src/test/java/com/wikia/webdriver/testsuites/testSuite.xml').split(',').
                collect({ path -> new File(path) })
        includeGroups = (project.hasProperty('groups') ? groups : 'Login').split(',')
    }

    minHeapSize = '800m'
    maxHeapSize = '800m'

    jvmArgs = ['-XX:MaxPermSize=1024m']


    systemProperty 'env', project.hasProperty('env') ? env : 'preview'
    systemProperty 'run_mvn', project.hasProperty('mvn_run') ? mvn_run : ''
    systemProperty 'base-address', project.hasProperty('base_address') ? base_address : ''
    systemProperty 'live-domain', project.hasProperty('live_domain') ? live_domain : ''
    systemProperty 'wiki-name', project.hasProperty('wiki_name') ? wiki_name : 'mediawiki119'
    systemProperty 'browser', project.hasProperty('browser') ? browser : 'CHROME'

    systemProperty 'platform', project.hasProperty('platform') ? platform : ''
    systemProperty 'platform-version',
                   project.hasProperty('platform_version') ? platform_version : ''
    systemProperty 'device-id', project.hasProperty('device_id') ? device_id : ''
    systemProperty 'mobile-config', '/selenium-config/mobile-config.xml'
    systemProperty 'config', '/selenium-config/config.xml'
    systemProperty 'captcha', '/selenium-config/captcha.txt'
}

dependencies {
    def webdriverVersion = '2.43.1'
    testCompile "junit:junit:4.11"
    testCompile 'org.apache.httpcomponents:httpcore:4.3.2'
    testCompile 'net.kennychua:phantomjs-qunit-runner:1.0.14'
    testCompile 'org.eclipse.jetty:jetty-server:8.1.15.v20140411'
    testCompile 'org.eclipse.jetty:jetty-servlet:8.1.15.v20140411'
    testCompile 'org.eclipse.jetty:jetty-server'
    testCompile 'org.eclipse.jetty:jetty-servlet'
    testCompile 'de.sstoehr:har-reader:1.0.0'
    testCompile 'xmlunit:xmlunit:1.3'
    testCompile "org.seleniumhq.selenium:selenium-chrome-driver:${webdriverVersion}"
    testCompile "org.seleniumhq.selenium:selenium-server:${webdriverVersion}"
    testCompile "org.seleniumhq.selenium:selenium-java:${webdriverVersion}"
    testCompile "org.seleniumhq.selenium:selenium-api:${webdriverVersion}"
    testCompile 'org.testng:testng:6.8.8'
    testCompile 'junit:junit:4.8.1'
    testCompile 'org.yaml:snakeyaml:1.8'
    testCompile 'org.apache.httpcomponents:httpclient:4.3.5'
    testCompile 'javax.mail:mail:1.4.4'
    testCompile 'commons-io:commons-io:1.3.2'
    testCompile 'commons-configuration:commons-configuration:1.6'
    testCompile 'com.github.detro.ghostdriver:phantomjsdriver:1.0.3'
    testCompile 'com.google.code.gson:gson:2.2.3'
    testCompile 'javax.json:javax.json-api:1.0'
    testCompile 'org.glassfish:javax.json:1.0.4'
    testCompile 'org.json:json:20080701'
    testCompile 'io.appium:java-client:2.1.0'
    testCompile 'joda-time:joda-time:2.7'
    testCompile('biz.neustar:browsermob-proxy:2.0-beta-7') {
        exclude group: 'org.eclipse.jetty'
    }
}
